# python_starter_code

./: .gitignore  .pre-commit-config.yaml  .pylintrc  1.1-variable_declaration.ipynb  1.2-variable_declaration.py  2.1-integer_functions.ipynb  2.2-integer_functions.py  20.1-string_and_slicing.ipynb  21.1-string_functions.ipynb  4.1-type_casting.ipynb  4.2-type_casting.py  7.2-number_conversion.py  8.1-number_conversion_with_format().ipynb  8.2-number_conversion_with_format().py  9.2-number_conversion_with_format_specifiers.py  9.4.1-string_functions.ipynb  9.4.2-string_functions.py  9.5.1-f-string.ipynb  9.5.2-f-string.py  9.5.3-list_.ipynb  9.5.4-list_.py  9.5.5-list_functions.ipynb  9.5.7-tuples.ipynb  README.md  complement_and_shift.ipynb  complement_and_shift.py  float_functions.ipynb  float_functions.py  integer_functions.py  number_conversion_with_format_specifiers.ipynb  number_conversion_with_format_specifiers.py  printing.ipynb  printing.py  pyproject.toml  string_and_slicing.py  string_functions.ipynb  string_functions.py  type_casting.py  variable_declaration.py
.ipynb_checkpoints/: number_conversion-checkpoint.ipynb  string_functions-checkpoint.ipynb
1. variable/: variable_declaration.ipynb  variable_declaration.py
10. string_and_slicing/: string_and_slicing.ipynb  string_and_slicing.py
11. string_functions/: string_functions.ipynb  string_functions.py
12. f_string/: f_string.ipynb  f_string.py
13. list/: list_.ipynb  list_.py
14. list_functions/: list_functions.ipynb  list_functions.py
15. tuples/: tuples.ipynb  tuples.py
2. integer/: integer_functions.ipynb  integer_functions.py
3. float/: float_functions.ipynb  float_functions.py
4. type_casting/: type_casting.ipynb  type_casting.py
6. printing/: printing.ipynb  (+1 more)
(+8 files in other folders)
